--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^16.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
     "sharp": "^0.34.3",
